--- a/edit/index.css
+++ b/edit/index.css
@@ -118,7 +118,8 @@ label {
   background-color: rgba(255, 255, 255, 0.7);
   margin: 2.5px 0;
 }
-#iframe {
-  margin-bottom: 20px;
-  border-radius: 5px;
+.hide {
+  display: none;
+  visibility: hidden;
+  opacity: 0;
 }
