--- a/edit/index.css
+++ b/edit/index.css
@@ -87,7 +87,7 @@ input {
   width: 280px;
   height: 40px;
   font-size: 24px;
-  margin: 5px auto;
+  margin: 20px auto;
   padding: 0 10px;
   box-sizing: border-box;
   border: none;
@@ -109,6 +109,8 @@ input[type="number"] {
   width: 200px;
   letter-spacing: 2px;
   position: relative;
+  transform: scale(0, 1);
+  opacity: 0;
   transition: all 0.4s ease;
 }
 input[type="number"]::-webkit-input-placeholder {
@@ -118,7 +120,7 @@ input[type="number"]::-webkit-input-placeholder {
 input[type="number"]:focus::-webkit-input-placeholder {
   color: white;
 }
-input[type="number"]:focus + .underline, input[type="number"]:hover + .underline {
+input[type="number"].show:focus + .underline, input[type="number"].show:hover + .underline {
   transform: scale(1);
 }
 .underline {
@@ -126,12 +128,19 @@ input[type="number"]:focus + .underline, input[type="number"]:hover + .underline
   display: inline-block;
   height: 1px;
   position: relative;
-  top: -6px;
+  top: -21px;
   -webkit-transform: scale(0, 1);
   transform: scale(0, 1);
   -webkit-transition: all 0.5s linear;
   transition: all 0.5s linear;
   width: 210px;
+}
+.show {
+  opacity: 1 !important;
+  transform: scale(1) !important;
+}
+.show + .underline {
+  transform: scale(0.2, 1);
 }
 input:focus {
   box-shadow: none;
@@ -164,6 +173,7 @@ input[type="submit"] {
 	-moz-transition: all 1s ease;
 	-o-transition: all 1s ease;
 	transition: all 1s ease;
+  cursor: pointer;
 }
 input[type="radio"] {
   position: absolute;
@@ -189,7 +199,6 @@ label {
   font-size: 16px;
   text-transform: full-width;
   word-spacing: 2px;
-  border: 1px solid white;
   padding: 0;
   margin-bottom: 5px;
   position: relative;
@@ -218,9 +227,9 @@ label {
   border: 1px solid #EEEEEE;
   border-radius: 10px;
   height: 20px;
-  width: 40px;
+  width: 45px;
   top: 3.5px;
-  right: 10px;
+  right: 15px;
 	z-index: 5;
 	transition: border .25s linear;
 	-webkit-transition: border .25s linear;
@@ -248,7 +257,7 @@ input[type=radio]:checked ~ .check {
 input[type=radio]:checked ~ .check::before{
   background: #0DFF92;
   border: 1px solid #0DFF92;
-  transform: translateX(17px) translateY(1.5px);
+  transform: translateX(21px) translateY(1.5px);
 }
 
 input[type=radio]:checked ~ label{
