--- a/edit/index.css
+++ b/edit/index.css
@@ -241,7 +241,7 @@ label {
   border-radius: 7.5px;
   border: 1px solid #EEEEEE;
   height: 15px;
-  width: 20px;
+  width: 22px;
   top: 0;
 	left: 0;
   margin: auto;
@@ -257,7 +257,7 @@ input[type=radio]:checked ~ .check {
 input[type=radio]:checked ~ .check::before{
   background: #0DFF92;
   border: 1px solid #0DFF92;
-  transform: translateX(21px) translateY(1.5px);
+  transform: translateX(20px) translateY(1.5px);
 }
 
 input[type=radio]:checked ~ label{
@@ -265,7 +265,7 @@ input[type=radio]:checked ~ label{
   background-color: rgba(20, 20, 20, 0.15);
 }
 .wrapper {
-  background-color: rgba(20, 20, 20, 0.3);
+  background-image: linear-gradient(rgba(20, 20, 20, 0.4), rgba(20, 20, 20, 0.25));
   box-shadow: -4px 10px 50px 10px rgba(20, 20, 20, 0.2);
   width: 320px;
   padding: 15px 20px;
@@ -285,7 +285,6 @@ input[type=radio]:checked ~ label{
   font-weight: bold;
   font-size: 15px;
   margin: 0 0 20px 0;
-  background-color: rgba(217, 255, 64, 0.09);
   padding: 15px 0 18px 0;
   color: #EEEEEE;
 }
