--- a/edit/index.css
+++ b/edit/index.css
@@ -111,7 +111,7 @@ input[type="number"] {
   position: relative;
   transform: scale(0, 1);
   opacity: 0;
-  transition: all 0.4s ease;
+  transition: all 0.4s ease-out;
 }
 input[type="number"]::-webkit-input-placeholder {
   letter-spacing: normal;
