--- a/edit/index.css
+++ b/edit/index.css
@@ -12,8 +12,28 @@ body, html {
 }
 @media screen and (max-width: 1069px) {
   body, html {
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
   }
+}
+*::-webkit-scrollbar {
+    width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 76, 102, 0.9);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(255, 76, 102, 0.97);
+}
+
+*::-webkit-scrollbar-button {
+    display: none;
 }
 form {
   width: 100vw;
@@ -356,7 +376,8 @@ input[type=radio]:checked ~ label{
   transform: none;
   transform: translateX(235px) rotateY(-80deg);
   transition: transform 0.37s ease-out;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   font-family: monospace;
 }
 .pin {
@@ -368,7 +389,7 @@ input[type=radio]:checked ~ label{
   background-color: rgba(255, 76, 102, 1);
   transform: translate3d(0, -50%, 20px);
   z-index: 100;
-  box-shadow: 0 3px 7px 1px rgba(150, 76, 102, 0.97);
+  box-shadow: -1px 0px 9px 1.5px rgba(20, 20, 20, 0.43);
   transition: all 0.8s ease-out;
   writing-mode: vertical-lr;
   text-orientation: upright;
@@ -392,7 +413,7 @@ input[type=radio]:checked ~ label{
 .pin:hover + .logger, .logger:hover {
   transform: translateX(0);
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1069px) {
   .logger {
     margin: 0px;
     margin-top: 30px;
