--- a/edit/index.css
+++ b/edit/index.css
@@ -8,7 +8,7 @@ body, html {
   font-family: "Raleway", sans-serif;
   background-image: linear-gradient(#199a8f, #24DBCC);
   color: white;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 @media screen and (max-width: 1069px) {
   body, html {
@@ -466,4 +466,8 @@ input[type=radio]:checked ~ label{
   display: none;
   visibility: hidden;
   opacity: 0;
+}
+iframe {
+  display: block;
+  margin: 30px auto;
 }
